--- a/rq/index.html
+++ b/rq/index.html
@@ -44,6 +44,21 @@
 							<span class="iconfont icon-gouwuche"></span>
 							<span>购物车</span>
 						</a>
+						<div class="my-cart">
+							<div class="cart-title">
+								<p class="">我的购物车</p>
+								<p>已有0件商品</p>
+							</div>
+							<div class="cart-slide"></div>
+							<div class="cart-body">
+								<div class="iconfont icon-gouwuche"></div>
+								<p>空空如也,快去添加吧</p>
+							</div>
+							<div class="cart-slide"></div>
+							<div class="go-cart">
+								<button>去购物车</button>
+							</div>
+						</div>
 					</li>
 					<li><a href="javascript:void(0);" onclick="login_show()">登录</a>&nbsp;/&nbsp;<a href="javascript:void(0);"
 							onclick="reg_show()">注册</a></li>
@@ -312,6 +327,7 @@
 				<li>商务合作</li>
 			</ul>
 			<div class="f-slide"></div>
+			<p>©京ICP备 12003892号-11 京公网安备11010802030151号</p>
 		</div>
 	</div>
 	<!-- 登录面板 -->
