--- a/rq/goods.html
+++ b/rq/goods.html
@@ -15,21 +15,71 @@
   <div class="header">
     <div class="h-container">
       <ul class="nav-item">
-        <li><a href="">商城首页</a></li>
-        <li><a href="">Top单品</a></li>
-        <li><a href="">新品推荐</a></li>
-        <li><a href="">场景导购</a></li>
-        <li><a href="">会员</a></li>
-        <li><a href="">热门搜索</a></li>
+        <li><a href="index.html">商城首页</a></li>
+        <li><a href="javascript:;">Top单品</a></li>
+        <li><a href="javascript:;">新品推荐</a></li>
+        <li><a href="javascript:;">场景导购</a></li>
+        <li><a href="javascript:;">会员</a></li>
+        <li><a href="javascript:;">热门搜索</a></li>
       </ul>
       <ul class="login-area">
-        <li class="wechat">关注公众号</li>
-        <li class="shop-cart">购物车</li>
-        <li class="login">登录</li>
-        <li class="register">注册</li>
+        <li class="wechat"><a href="javascript:;">关注公众号</a></li>
+        <li class="shop-cart"><a href="javascript:;">购物车</a></li>
+        <li class="login"><a href="javascript:;">登录</a></li>
+        <li class="register"><a href="javascript:;">注册</a></li>
       </ul>
     </div>
   </div>
+  <!-- 商品详情 -->
+  <div class="goods">
+    <!-- 标题 -->
+    <div class="goods-classify">手机配件&nbsp;&nbsp;&lt;&nbsp;&nbsp线材类&nbsp;&nbsp;&lt;&nbsp&nbsp快充线</div>
+    <!-- 简介 -->
+    <div class="goods-directions">
+      <div class="goods-img">
+        <img src="static/img/tp1.jpg" alt="">
+      </div>
+      <div class="information">
+        <div class="title">ROCK苹果数据线iphone11短6s加长认证5s手机6xsmax充电线7plus器8X快充ipad4冲电SP七通用闪充x正品平板电脑</div>
+        <div class="title2">买一送一 充电更快 更耐用不弹窗</div>
+        <div class="price">¥ 12.90</div>
+        <div class="express">运费:</div>
+        <ul class="sales">
+          <li class="sales-count">30天销售<a href="">100</a>件</li>
+          <li class="sales-comment">累计评价<a href="">100</a>条</li>
+          <li class="sales-other">奖励<a href="">1</a>积分</li>
+        </ul>
+        <div class="goods-btn">
+          <a href="javascript:;" class="add-cart">加入购物车</a>
+          <a href="javascript:;" class="buy">立即购买</a>
+        </div>
+      </div>
+    </div>
+    <!-- 详情介绍页面 -->
+    <!-- 选项卡 -->
+    <ul class="tab" id="tab">
+      <li class="active"><a href="javascript:;" data-click="tab" data-target="details">商品详情</a></li>
+      <li class=""><a href="javascript:;" data-click="tab" data-target="comment">历史评价</a></li>
+      <li class=""><a href="javascript:;" data-click="tab" data-target="service">服务详情</a></li>
+    </ul>
+    <div class="container" id="container">
+      <div id="details">1</div>
+      <div id="comment">2</div>
+      <div id="service">3</div>
+    </div>
+    <!-- 侧边栏 -->
+    <div class="side">
+      <div class="s-wechat">
+        <img src="static/img/wechat.jpg" alt="">
+        <p>扫码了解更多</p>
+      </div>
+      <div class="recommend">
+        <p>推荐商品</p>
+        <div class="slide"></div>
+      </div>
+    </div>
+  </div>
+
   <!-- 页面底部 -->
   <div class="footer">
     <div class="f-container">
@@ -81,5 +131,32 @@
       <p>©京ICP备 12003892号-11 京公网安备11010802030151号</p>
     </div>
   </div>
+  <script>
+    // 选项卡切换
+    // 1. 获取所有a标签, li标签,和对应显示div标签的元素对象
+    let tabs=document.querySelectorAll("[data-click=tab]");
+    let lis=document.querySelectorAll("#tab li");
+    let divs=document.querySelectorAll("#container div")
+    // 2. 添加点击事件， 所有li标签取消激活, 所有div隐藏
+    for(let tab of tabs){
+      tab.onclick=function(){
+        // 遍历所有li
+        for(let li of lis){
+          li.className=""
+        }
+        // 遍历所有div
+        for(let div of divs){
+          div.style.display="none";
+        }
+        // 3. 设置当前点击a标签为激活状态
+        this.parentElement.className="active";
+        // 获取当前a标签对应的div, 先获取id, 再通过id找
+        let id=this.dataset.target;
+        let div=document.getElementById(id);
+        // 4. 设置对应div为显示
+        div.style.display="block";
+      }
+    }
+  </script>
 </body>
 </html>
