v-0112:add_mine.html

--- a/rq/index.html
+++ b/rq/index.html
@@ -6,8 +6,8 @@
 	<link rel="icon" href="./static/img/icon.png">
 	<link rel="stylesheet" href="http://at.alicdn.com/t/font_1256121_vrrz4wgi69b.css">
 	<link rel="stylesheet" href="./static/css/index.css">
+	<link rel="stylesheet" href="./static/css/index_menu.css">
 	<link rel="stylesheet" href="./static/css/main.css">
-	<link rel="stylesheet" href="./static/css/footer.css">
 </head>
 <body>
 	<div class="header">
@@ -127,7 +127,7 @@
 			</div>
 			<ul class="p-item-box">
 				<li class="p-item">
-					<a href="#"><img src="static/img/tp1.jpg" alt=""></a>
+					<a href="goods.html"><img src="static/img/tp1.jpg" alt=""></a>
 					<div class="pname"><a href="#">ROCK苹果快充数据线</a></div>
 					<div class="price">￥12.9</div>
 					<div class="count">已售63403件</div>
@@ -407,5 +407,5 @@
 		</div>
 	</div>
 </body>
-<script src="./static/js/index.js"></script>
+<script src="./static/js/main.js"></script>
 </html>
