--- a/rq/mine.html
+++ b/rq/mine.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>商品详情</title>
+  <title>个人中心</title>
   <link rel="icon" href="./static/img/icon.png">
   <link rel="stylesheet" href="http://at.alicdn.com/t/font_1256121_vrrz4wgi69b.css">
-  <link rel="stylesheet" href="static/css/goods.css">
+  <link rel="stylesheet" href="static/css/mine.css">
   <link rel="stylesheet" href="static/css/main.css">
 </head>
 <body>
@@ -30,56 +30,6 @@
       </ul>
     </div>
   </div>
-  <!-- 商品详情 -->
-  <div class="goods">
-    <!-- 标题 -->
-    <div class="goods-classify">手机配件&nbsp;&nbsp;&lt;&nbsp;&nbsp线材类&nbsp;&nbsp;&lt;&nbsp&nbsp快充线</div>
-    <!-- 简介 -->
-    <div class="goods-directions">
-      <div class="goods-img">
-        <img src="static/img/tp1.jpg" alt="">
-      </div>
-      <div class="information">
-        <div class="title">ROCK苹果数据线iphone11短6s加长认证5s手机6xsmax充电线7plus器8X快充ipad4冲电SP七通用闪充x正品平板电脑</div>
-        <div class="title2">买一送一 充电更快 更耐用不弹窗</div>
-        <div class="price">¥ 12.90</div>
-        <div class="express">运费:</div>
-        <ul class="sales">
-          <li class="sales-count">30天销售<a href="">100</a>件</li>
-          <li class="sales-comment">累计评价<a href="">100</a>条</li>
-          <li class="sales-other">奖励<a href="">1</a>积分</li>
-        </ul>
-        <div class="goods-btn">
-          <a href="javascript:;" class="add-cart">加入购物车</a>
-          <a href="javascript:;" class="buy">立即购买</a>
-        </div>
-      </div>
-    </div>
-    <!-- 详情介绍页面 -->
-    <!-- 选项卡 -->
-    <ul class="tab" id="tab">
-      <li class="active"><a href="javascript:;" data-click="tab" data-target="details">商品详情</a></li>
-      <li class=""><a href="javascript:;" data-click="tab" data-target="comment">历史评价</a></li>
-      <li class=""><a href="javascript:;" data-click="tab" data-target="service">服务详情</a></li>
-    </ul>
-    <div class="container" id="container">
-      <div id="details">1</div>
-      <div id="comment">2</div>
-      <div id="service">3</div>
-    </div>
-    <!-- 侧边栏 -->
-    <div class="side">
-      <div class="s-wechat">
-        <img src="static/img/wechat.jpg" alt="">
-        <p>扫码了解更多</p>
-      </div>
-      <div class="recommend">
-        <p>推荐商品</p>
-        <div class="slide"></div>
-      </div>
-    </div>
-  </div>
-
   <!-- 页面底部 -->
   <div class="footer">
     <div class="f-container">
@@ -209,6 +159,5 @@
     </div>
   </div>
   <script src="static/js/main.js"></script>
-  <script src="static/js/goods.js"></script>
 </body>
 </html>
