--- a/rq/index.html
+++ b/rq/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="./static/css/index.css">
 	<link rel="stylesheet" href="./static/css/index_menu.css">
 	<link rel="stylesheet" href="./static/css/main.css">
+	<link rel="stylesheet" href="https://cdn.bootcss.com/animate.css/3.7.2/animate.css">
 </head>
 <body>
 	<div class="header">
@@ -113,7 +114,21 @@
 			<div class="menu-details">我是菜单5</div>
 			<div class="menu-details">我是菜单6</div>
 			<div class="banner-content">
-				<img src="static/img/banner4.jpg" alt="">
+				<ul id="banner_img">
+					<li><a href="javascript:;"><img src="static/img/banner1.jpg" alt=""></a></li>
+					<li><a href="javascript:;"><img src="static/img/banner2.jpg" alt=""></a></li>
+					<li><a href="javascript:;"><img src="static/img/banner3.jpg" alt=""></a></li>
+					<li><a href="javascript:;"><img src="static/img/banner4.jpg" alt=""></a></li>
+					<li><a href="javascript:;"><img src="static/img/banner1.jpg" alt=""></a></li>
+				</ul>
+				<ul id="banner_index">
+					<li class="active"></li>
+					<li></li>
+					<li></li>
+					<li></li>
+				</ul>
+				<div id="prevImg"><img src="static/img/prev_img.png" alt=""></div>
+				<div id="nextImg"><img src="static/img/next_img.png" alt=""></div>
 			</div>
 		</div>
 		<!-- 绝对定位影响, 写个div分割 -->
@@ -126,31 +141,31 @@
 				 <a href="#">查看更多</a>
 			</div>
 			<ul class="p-item-box">
-				<li class="p-item">
+				<li class="p-item animated">
 					<a href="goods.html"><img src="static/img/tp1.jpg" alt=""></a>
 					<div class="pname"><a href="#">ROCK苹果快充数据线</a></div>
 					<div class="price">￥12.9</div>
 					<div class="count">已售63403件</div>
 				</li>
-				<li class="p-item">
+				<li class="p-item animated">
 					<a href="#"><img src="static/img/tp1.jpg" alt=""></a>
 					<div class="pname"><a href="#">ROCK苹果快充数据线</a></div>
 					<div class="price">￥12.9</div>
 					<div class="count">已售63403件</div>
 				</li>
-				<li class="p-item">
+				<li class="p-item animated">
 					<a href="#"><img src="static/img/tp1.jpg" alt=""></a>
 					<div class="pname"><a href="#">ROCK苹果快充数据线</a></div>
 					<div class="price">￥12.9</div>
 					<div class="count">已售63403件</div>
 				</li>
-				<li class="p-item">
+				<li class="p-item animated">
 					<a href="#"><img src="static/img/tp1.jpg" alt=""></a>
 					<div class="pname"><a href="#">ROCK苹果快充数据线</a></div>
 					<div class="price">￥12.9</div>
 					<div class="count">已售63403件</div>
 				</li>
-				<li class="p-item">
+				<li class="p-item animated">
 					<a href="#"><img src="static/img/tp1.jpg" alt=""></a>
 					<div class="pname"><a href="#">ROCK苹果快充数据线</a></div>
 					<div class="price">￥12.9</div>
@@ -408,6 +423,7 @@
 			<div class="reg-modal-footer"></div>
 		</div>
 	</div>
-</body>
+<script src="./static//js/index.js"></script>
 <script src="./static/js/main.js"></script>
+</body>
 </html>
